Update 'z00vx9qwm-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a40d987ae5.243h.p3.openshiftapps.com/rhtap/rhtap-qe:0ea44e6f78b9a5fad3e37b9a7134e7ca9f95c12d@sha256:4ccd2aefb97eaa3bc0250c2e08d46cabbbcb07444c155b4033c459ee9071b3fe

--- a/components/z00vx9qwm-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/z00vx9qwm-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: z00vx9qwm-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a40d987ae5.243h.p3.openshiftapps.com/rhtap/rhtap-qe:0ea44e6f78b9a5fad3e37b9a7134e7ca9f95c12d@sha256:4ccd2aefb97eaa3bc0250c2e08d46cabbbcb07444c155b4033c459ee9071b3fe
+          name: container-image
